# tabular-ml-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_synthetic_db.py
src/: featurize.py  main.py  model.py  predict.py  utils.py
tests/: test_featurize.py  test_main.py  test_model.py  test_predict.py  test_utils.py
