[tool.poetry]
name = "tabular-ml-pipeline"
version = "0.1.0"
description = "Modular ML pipeline for tabular (synthetic) healthcare data, with recall optimization."
authors = ["parrenthesis"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.3.1"
numpy = "^1.26"
scikit-learn = "1.2.2"
jupyter = "^1.1.1"
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
xgboost = "^3.0.2"
imbalanced-learn = "0.11.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
notebook = "^7.4.4"
jupyter = "^1.1.1"
jupyterlab = "^4.4.5"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
